new section added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/abhi.css">
     <style>
-       
+
     </style>
 </head>
 
@@ -115,8 +115,7 @@
             </div>
 
             <!-- Right Column -->
-            <div class="col-md-6 d-flex justify-content-center align-items-start align-items-md-center p-0"
-                >
+            <div class="col-md-6 d-flex justify-content-center align-items-start align-items-md-center p-0">
                 <div class="login-wrap p-4 p-md-5 shadow rounded bg-white w-100" style="max-width: 400px;">
                     <h3 class="mb-4 text-center">Register Now</h3>
                     <form action="#" class="signup-form">
@@ -149,7 +148,7 @@
     </section>
 
 
-    <section class="asb-section container my-5">
+    <section class="asb-section container-lg-fluid container-md my-5">
         <div class="row g-4">
             <!-- Left Content -->
             <div class="col-lg-8">
@@ -172,7 +171,8 @@
                 <div class="info-box">
                     <h6>Stay Updated on AmritaCAT!</h6>
                     <p>Join our WhatsApp Group for Exclusive Insights.</p>
-                    <a href="https://chat.whatsapp.com/JtkI6i2eRsLEXNNo245gg3" target="_blank" class="btn btn-success">
+                    <a href="https://chat.whatsapp.com/JtkI6i2eRsLEXNNo245gg3" target="_blank" class="btn btn-success"
+                        style="border-radius: 12px;">
                         Join WhatsApp Group
                     </a>
                 </div>
@@ -199,6 +199,53 @@
             </div>
         </div>
     </section>
+
+
+  <section class="container py-5 position-relative">
+  <div class="row align-items-center">
+    <!-- Left: Image -->
+    <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 position-relative">
+      <img 
+        src="https://static.npfs.co/accounts/282/documents/2024/9/2/bC73FbyE-amrita-mba-bufallo-university.jpg" 
+        alt="Dual Degree" 
+        class="img-fluid rounded shadow">
+    </div>
+
+    <!-- Right: Content -->
+    <div class="col-lg-6 col-md-12 position-relative">
+      <div class="p-4 bg-primary text-white shadow content-box">
+        <h1 class="h3 fw-bold text-white mb-3">Dual Degree</h1>
+        <p class="mb-0">
+          Programme with University at Buffalo  
+          Amrita School of Business, Bengaluru offers a unique MBA programme in
+          collaboration with one of the top public universities in USA – University at
+          Buffalo, State University of New York (UB).  
+          <br><br>
+          The Amrita–UB MBA-MS collaborative dual-degree programme began in 2009 and
+          has taken great strides over the last few years. On successful completion, the
+          graduand is conferred an MBA degree by Amrita Vishwa Vidyapeetham and
+          an MS in Business Analytics and Systems by University at Buffalo.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+  .content-box {
+    border-radius: 12px;
+    position: relative;
+    z-index: 2; /* bring on top */
+    margin-left: -150px; /* overlap image */
+  }
+
+  @media (max-width: 991px) {
+    /* Reset overlap on mobile */
+    .content-box {
+      margin-left: 0;
+    }
+  }
+</style>
 
 
 
