--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/abhi.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
     <style>
 
     </style>
@@ -348,6 +350,7 @@
     <img src="https://static.npfs.co/accounts/282/documents/2024/9/5/image%20(12).png?1746093703"
          alt="Placement Success"
          class="img-fluid mt-2"
+          oncontextmenu="return false"
          style="border-radius: 8px;">
         </div>
       </div>
@@ -357,6 +360,40 @@
 </section>
 
 
+<!-- index.html -->
+<section class="container">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<link href="https://fonts.googleapis.com/css?family=Inter:700,400&display=swap" rel="stylesheet">
+<div class="banner-steps">
+  <div class="banner-step step1">
+    <div class="banner-title">STEP 1</div>
+    <div class="banner-icon"><i class="bi bi-person-badge"></i></div>
+    <div class="banner-desc">Create Your Login</div>
+  </div>
+  <div class="banner-step step2">
+    <div class="banner-title">STEP 2</div>
+    <div class="banner-icon"><i class="bi bi-envelope-paper"></i></div>
+    <div class="banner-desc">Verify Email</div>
+  </div>
+  <div class="banner-step step3">
+    <div class="banner-title">STEP 3</div>
+    <div class="banner-icon"><i class="bi bi-credit-card-2-front"></i></div>
+    <div class="banner-desc">Fill Application<br>Form Online</div>
+  </div>
+  <div class="banner-step step4">
+    <div class="banner-title">STEP 4</div>
+    <div class="banner-icon"><i class="bi bi-check2-square"></i></div>
+    <div class="banner-desc">Pay Application Fee</div>
+  </div>
+  <div class="banner-step step5">
+    <div class="banner-title">STEP 5</div>
+    <div class="banner-icon"><i class="bi bi-credit-card-2-front"></i></div>
+    <div class="banner-desc">Upload Required<br>Documents</div>
+  </div>
+</div>
+
+
+</section>
 
 
 
