home img responsive is working good

--- a/index.html
+++ b/index.html
@@ -104,16 +104,17 @@
             <div class="col-md-6 p-0">
                 <!-- Desktop (lg and above) -->
                 <img src="images/bg-half.jpg" alt="Desktop Image" class="img-fluid w-100 d-none d-lg-block"
-                    style="object-fit: cover; min-height: 100vh;" oncontextmenu="return false">
+                    style="object-fit: cover; " oncontextmenu="return false" draggable="false">
 
                 <!-- Tablet (md only) -->
                 <img src="images/bg-half-perons-none.jpg" alt="Tablet Image"
-                    class="img-fluid w-100 d-none d-md-block d-lg-none" style="object-fit: cover; min-height: 100vh;"
-                    oncontextmenu="return false">
+                    class="img-fluid w-100 d-none d-md-block d-lg-none" style="object-fit: cover; "
+                    oncontextmenu="return false" draggable="false">
 
                 <!-- Mobile (sm and below) -->
                 <img src="images/bg-half.jpg" alt="Mobile Image" class="img-fluid w-100 d-block d-md-none"
-                    style="object-fit: cover; height: auto;" oncontextmenu="return false">
+                    style="object-fit: cover; height: auto;" oncontextmenu="return false" draggable="false">
+                    
             </div>
 
             <!-- Right Column -->
