fav icon and title change

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>StudyLab - Free Bootstrap 4 Template by Colorlib</title>
+    <title>MBA Amrita</title>
     <meta charset="utf-8">
+      <link rel="icon" type="image/x-icon" href="images/amrita_favicon.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
@@ -208,7 +210,7 @@
         <div class="row align-items-center">
             <!-- Left: Image -->
             <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 position-relative">
-                <img src="https://static.npfs.co/accounts/282/documents/2024/9/2/bC73FbyE-amrita-mba-bufallo-university.jpg"
+                <img src="images/dual_degree.jpg"
                     alt="Dual Degree" class="img-fluid rounded shadow">
             </div>
 
