--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>MBA Amrita</title>
     <meta charset="utf-8">
-      <link rel="icon" type="image/x-icon" href="images/amrita_favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/amrita_favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -210,8 +210,7 @@
         <div class="row align-items-center">
             <!-- Left: Image -->
             <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 position-relative">
-                <img src="images/dual_degree.jpg"
-                    alt="Dual Degree" class="img-fluid rounded shadow">
+                <img src="images/dual_degree.jpg" alt="Dual Degree" class="img-fluid rounded shadow">
             </div>
 
             <!-- Right: Content -->
@@ -249,7 +248,8 @@
 
             <!-- Why Choose ASB -->
             <div class="card mt-3" style="border-radius: 12px;">
-                <div class="card-header bg-primary" id="headingOne">
+                <div class="card-header " id="headingTwo"
+                    style="      background: linear-gradient(135deg, #a4123f, #d91b4d); ">
 
                     <h6 type="button" class="text-white d-flex justify-content-between align-items-center"
                         data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
@@ -274,10 +274,13 @@
 
             <!-- Campus Highlights -->
             <div class="card mt-3" style="border-radius: 12px;">
-                <div class="card-header bg-primary" id="headingTwo">
-                    <h6 type="button" class="collapsed text-white" data-toggle="collapse" data-target="#collapseTwo"
-                        aria-expanded="false" aria-controls="collapseTwo">
+                <div class="card-header " id="headingTwo"
+                    style="      background: linear-gradient(135deg, #a4123f, #d91b4d); ">
+                    <h6 type="button" class="text-white d-flex justify-content-between align-items-center"
+                        data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                        aria-controls="collapseTwo">
                         Campus Highlights
+                        <span class="arrow" style="transition: transform 0.3s;">&#9662;</span> <!-- down arrow -->
                     </h6>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
@@ -294,10 +297,13 @@
 
             <!-- Specializations -->
             <div class="card mt-3" style="border-radius: 12px;">
-                <div class="card-header bg-primary" id="headingThree">
-                    <h6 type="button" class="collapsed text-white" data-toggle="collapse" data-target="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
+                <div class="card-header " id="headingTwo"
+                    style="      background: linear-gradient(135deg, #a4123f, #d91b4d); ">
+                    <h6 type="button" class="text-white d-flex justify-content-between align-items-center"
+                        data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                        aria-controls="collapseThree">
                         Specializations
+                        <span class="arrow" style="transition: transform 0.3s;">&#9662;</span> <!-- down arrow -->
                     </h6>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
@@ -315,10 +321,13 @@
 
             <!-- Application Process -->
             <div class="card mt-3" style="border-radius: 12px;">
-                <div class="card-header bg-primary" id="headingFour">
-                    <h6 type="button" class="collapsed text-white" data-toggle="collapse" data-target="#collapseFour"
-                        aria-expanded="false" aria-controls="collapseFour">
+                <div class="card-header " id="headingTwo"
+                    style="      background: linear-gradient(135deg, #a4123f, #d91b4d); ">
+                    <h6 type="button" class="text-white d-flex justify-content-between align-items-center"
+                        data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+                        aria-controls="collapseFour">
                         Application Process
+                        <span class="arrow" style="transition: transform 0.3s;">&#9662;</span> <!-- down arrow -->
                     </h6>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
@@ -335,10 +344,13 @@
 
             <!-- Selection Process -->
             <div class="card mt-3" style="border-radius: 12px;">
-                <div class="card-header bg-primary" id="headingFive">
-                    <h6 type="button" class="collapsed text-white" data-toggle="collapse" data-target="#collapseFive"
-                        aria-expanded="false" aria-controls="collapseFive">
+                <div class="card-header " id="headingTwo"
+                    style="      background: linear-gradient(135deg, #a4123f, #d91b4d); ">
+                    <h6 type="button" class="text-white d-flex justify-content-between align-items-center"
+                        data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
+                        aria-controls="collapseFive">
                         Selection Process for Admission
+                        <span class="arrow" style="transition: transform 0.3s;">&#9662;</span> <!-- down arrow -->
                     </h6>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
@@ -355,10 +367,13 @@
 
             <!-- Placement Success -->
             <div class="card mt-3" style="border-radius: 12px;">
-                <div class="card-header bg-primary" id="headingSix">
-                    <h6 type="button" class="collapsed text-white" data-toggle="collapse" data-target="#collapseSix"
-                        aria-expanded="false" aria-controls="collapseSix">
+                <div class="card-header " id="headingTwo"
+                    style="      background: linear-gradient(135deg, #a4123f, #d91b4d); ">
+                    <h6 type="button" class="text-white d-flex justify-content-between align-items-center"
+                        data-toggle="collapse" data-target="#collapseSix" aria-expanded="false"
+                        aria-controls="collapseSix">
                         Placement Success
+                        <span class="arrow" style="transition: transform 0.3s;">&#9662;</span> <!-- down arrow -->
                     </h6>
                 </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
@@ -370,9 +385,8 @@
                             <li>Top recruiters: Deloitte, KPMG, Infosys, Amazon.</li>
                         </ul>
                         <!-- Added image below the UL -->
-                        <img src="https://static.npfs.co/accounts/282/documents/2024/9/5/image%20(12).png?1746093703"
-                            alt="Placement Success" class="img-fluid mt-2" oncontextmenu="return false"
-                            style="border-radius: 8px;">
+                        <img src="images/placement" alt="Placement Success" class="img-fluid mt-2"
+                            oncontextmenu="return false" style="border-radius: 8px;">
                     </div>
                 </div>
             </div>
@@ -971,6 +985,187 @@
 
 
 
+    <section class="container mt-5 mb-5">
+        <h4 class="text-center text-primary mb-4" style="font-weight: 600; font-size: 25px;">Rankings & Accreditation
+        </h4>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <img class="custom-img"
+                    src="https://static.npfs.co/accounts/282/documents/2024/8/28/impact-ranking-2024-new.png?1727160507"
+                    alt="">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img class="custom-img"
+                    src="https://static.npfs.co/accounts/282/documents/2024/8/28/KCXUr1Nk-the-world-university-ranking5.jpg?1727160507"
+                    alt="">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img class="custom-img"
+                    src="https://static.npfs.co/accounts/282/documents/2024/8/28/Images.jpg?1727160507" alt="">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img class="custom-img"
+                    src="https://static.npfs.co/accounts/282/documents/2024/9/24/WhatsApp%20Image%202024-09-23%20at%204.42.09%20PM%20(1).jpeg?1727160507"
+                    alt="">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img class="custom-img"
+                    src="https://static.npfs.co/accounts/282/documents/2024/8/28/Scemn3cV-aacsb-ranking.jpg?1727160507"
+                    alt="">
+            </div>
+            <div class="col-md-4 mb-4">
+                <img class="custom-img"
+                    src="https://static.npfs.co/accounts/282/documents/2024/8/28/voGB1SDD-the-world-university-ranking.jpg?1727160507"
+                    alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="container mt-5 mb-5">
+        <h4 class="text-center text-primary mb-4" style="font-weight: 600; font-size: 25px;">International Collaboration
+        </h4>
+        <ul>
+            <li>Dual Degree Program with University at Buffalo, State University of New York, USA; Telecom Ecole de
+                Management, France</li>
+            <li>Student Exchange and Research Collaboration with Deakin University, Australia</li>
+            <li>Student Exchange with University of Groningen</li>
+            <li>Faculty & Student Mobility under European Erasmus Mundus Program</li>
+        </ul>
+
+    </section>
+
+
+
+    <style>
+        /* Set a base color for footer text and links for readability */
+        .ftco-footer,
+        .ftco-footer p,
+        .ftco-footer li {
+            color: #555555;
+            /* A pleasant dark gray */
+            font-size: 15px;
+        }
+
+        .ftco-footer a {
+            color: #555555;
+            transition: color 0.2s ease-in-out;
+        }
+
+        /* Make headings a solid black */
+        .ftco-footer .ftco-heading-2 {
+            color: #000000;
+        }
+
+        /* Use an accent color for icons and link hovers */
+        .ftco-footer a:hover {
+            color: #0d6efd;
+            /* Bootstrap Blue */
+        }
+
+        .ftco-footer .icon {
+            color: #0d6efd;
+        }
+
+        /* Styles for the new campus subheadings */
+        .ftco-footer h5 {
+            color: #333333;
+            font-weight: 600;
+            margin-top: 1.5rem;
+            margin-bottom: 0.75rem;
+        }
+
+        .ftco-footer h5:first-child {
+            margin-top: 0;
+        }
+    </style>
+
+    <footer class="ftco-footer ftco-no-pt" style="background: white;">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md-4 pt-5">
+                    <div class="ftco-footer-widget pt-md-5 mb-4">
+                        <h2 class="ftco-heading-2" style="color: #999999 !important;">General Inquiries</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><a href="tel://04448133344"><span class="icon fa fa-phone"></span><span class=""
+                                            style="color: #999999 !important;">044-48133344 (Toll-Free)</span></a></li>
+                                <li><a href="mailto:mba@amrita.edu"><span class="icon fa fa-paper-plane"></span><span
+                                            class="text" style="color: #999999 !important;">mba@amrita.edu</span></a>
+                                </li>
+                                <li><a href="https://chat.whatsapp.com/JtkI6i2eRsLEXNNo245gg3" target="_blank"><span
+                                            class="icon fa fa-whatsapp"></span><span class="text"
+                                            style="color: #999999 !important;">Join AmritaCAT! WhatsApp</span></a></li>
+                            </ul>
+                        </div>
+                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
+                            <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
+                            <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
+                            <li class="ftco-animate"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                            <li class="ftco-animate"><a href="#"><span class="fa fa-telegram"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 pt-5">
+                    <div class="ftco-footer-widget pt-md-5 mb-4">
+                        <h2 class="ftco-heading-2">Campus Contacts</h2>
+
+                        <h5>Coimbatore</h5>
+                        <ul class="list-unstyled">
+                            <li>PH: 9443384493, 9943117777</li>
+                            <li>EMAIL: asb@amrita.edu</li>
+                        </ul>
+
+                        <h5>Amritapuri</h5>
+                        <ul class="list-unstyled">
+                            <li>PH: +91 9072000196</li>
+                            <li>EMAIL: mba@am.amrita.edu</li>
+                        </ul>
+
+                        <h5>Kochi</h5>
+                        <ul class="list-unstyled">
+                            <li>PH: 9400998635</li>
+                            <li>EMAIL: mba@asb.kochi.amrita.edu</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 pt-5">
+                    <div class="ftco-footer-widget pt-md-5 mb-4">
+                        <h2 class="ftco-heading-2">&nbsp;</h2>
+                        <h5>Bengaluru</h5>
+                        <ul class="list-unstyled">
+                            <li>PH: 7022588702</li>
+                            <li>EMAIL: mba@blr.amrita.edu</li>
+                        </ul>
+
+                        <h5>Amaravati</h5>
+                        <ul class="list-unstyled">
+                            <li>PH: 9841934447</li>
+                            <li>EMAIL: mba@av.amrita.edu</li>
+                            <li><a href="https://chat.whatsapp.com/FJTBHbba8OI7Zx9n9KS0Cj" target="_blank"
+                                    class="text-success"><span class="fa fa-whatsapp"></span> Join Group</a></li>
+                        </ul>
+
+                        <h5>Mysuru</h5>
+                        <ul class="list-unstyled">
+                            <li>PH: 8050091952, 9945531123</li>
+                            <li>EMAIL: admissions@my.amrita.edu</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p style="color: #999999;">
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script>
+                        All rights reserved | Designed with <i class="fa fa-heart text-danger" aria-hidden="true"></i>
+                        by <a href="https://www.amrita.edu" target="_blank">Amrita Vishwa Vidyapeetham</a>
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
