some design changed in ui step procces and some mistake corrected

--- a/index.html
+++ b/index.html
@@ -36,25 +36,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
             <img src="images/amrita_logo.png" width="200" alt="">
-            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="oi oi-menu text-primary"></span> Menu
-            </button> -->
+
             <p class="text-primary font-weight-medium" style="font-size: 20px;">MBA | MBA-MS ADMISSION <span
                     class="badge badge-primary bg-primary">2025</span></p>
 
-            <!-- <button class=" btn btn-primary rounded-pill">Apply</button> -->
 
-            <!-- <div class="collapse navbar-collapse" id="ftco-nav">
-       <ul class="navbar-nav ml-auto">
-         <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-         <li class="nav-item"><a href="course.html" class="nav-link">Course</a></li>
-         <li class="nav-item"><a href="instructor.html" class="nav-link">Instructor</a></li>
-         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-     </ul>
- </div> -->
         </div>
     </nav>
     <!-- END nav -->
@@ -401,7 +387,7 @@
 
 
     <!-- index.html -->
-    <section class="container">
+    <section class="container d-md-block d-none">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link href="https://fonts.googleapis.com/css?family=Inter:700,400&display=swap" rel="stylesheet">
         <div class="banner-steps">
@@ -433,6 +419,59 @@
         </div>
 
 
+    </section>
+
+    <section class="container d-md-none d-block">
+
+        <div class="step-section">
+            <div class="step-header">
+                <div class="step-number">1</div>
+                <div class="step-title">Create Your Account</div>
+            </div>
+            <div class="step-description">
+                Register with your email and basic details to start the application.
+            </div>
+        </div>
+
+        <div class="step-section">
+            <div class="step-header">
+                <div class="step-number">2</div>
+                <div class="step-title">Verify Your Email</div>
+            </div>
+            <div class="step-description">
+                Confirm your email address to secure your account.
+            </div>
+        </div>
+
+        <div class="step-section">
+            <div class="step-header">
+                <div class="step-number">3</div>
+                <div class="step-title">Fill Out Application Form</div>
+            </div>
+            <div class="step-description">
+                Provide your personal, academic, and course details online.
+            </div>
+        </div>
+
+        <div class="step-section">
+            <div class="step-header">
+                <div class="step-number">4</div>
+                <div class="step-title">Pay Application Fee</div>
+            </div>
+            <div class="step-description">
+                Complete a safe and secure online payment to submit your form.
+            </div>
+        </div>
+
+        <div class="step-section">
+            <div class="step-header">
+                <div class="step-number">5</div>
+                <div class="step-title">Upload Required Documents</div>
+            </div>
+            <div class="step-description">
+                Upload your certificates, ID proof, and any supporting documents.
+            </div>
+        </div>
     </section>
 
 
@@ -483,9 +522,9 @@
             <div class="col-md-4 col-12 mb-4">
                 <div class="text-center">
                     <img src="https://static.npfs.co/accounts/282/documents/2024/8/30/amaravathy-campus.jpg?1738910803"
-                        alt="Amaravathi" class="img-fluid"
+                        alt="Amaravati" class="img-fluid"
                         style="border-radius: 12px; width: 100%; height: 220px; object-fit: cover;">
-                    <h5 class="mt-3 text-primary" style="font-weight: 600;">Amaravathi</h5>
+                    <h5 class="mt-3 text-primary" style="font-weight: 600;">Amaravati</h5>
                 </div>
             </div>
 
@@ -985,35 +1024,35 @@
 
 
 
-    <section class="container mt-5 mb-5">
+    <section class="container mt-5 mb-5 " >
         <h4 class="text-center text-primary mb-4" style="font-weight: 600; font-size: 25px;">Rankings & Accreditation
         </h4>
-        <div class="row">
-            <div class="col-md-4 mb-4">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-md-4 col-8 mb-4">
                 <img class="custom-img"
                     src="https://static.npfs.co/accounts/282/documents/2024/8/28/impact-ranking-2024-new.png?1727160507"
                     alt="">
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-8 mb-4">
                 <img class="custom-img"
                     src="https://static.npfs.co/accounts/282/documents/2024/8/28/KCXUr1Nk-the-world-university-ranking5.jpg?1727160507"
                     alt="">
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-8 mb-4">
                 <img class="custom-img"
                     src="https://static.npfs.co/accounts/282/documents/2024/8/28/Images.jpg?1727160507" alt="">
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-8 mb-4">
                 <img class="custom-img"
                     src="https://static.npfs.co/accounts/282/documents/2024/9/24/WhatsApp%20Image%202024-09-23%20at%204.42.09%20PM%20(1).jpeg?1727160507"
                     alt="">
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-8 mb-4">
                 <img class="custom-img"
                     src="https://static.npfs.co/accounts/282/documents/2024/8/28/Scemn3cV-aacsb-ranking.jpg?1727160507"
                     alt="">
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-8 mb-4">
                 <img class="custom-img"
                     src="https://static.npfs.co/accounts/282/documents/2024/8/28/voGB1SDD-the-world-university-ranking.jpg?1727160507"
                     alt="">
@@ -1038,132 +1077,80 @@
 
     <style>
         /* Set a base color for footer text and links for readability */
-        .ftco-footer,
-        .ftco-footer p,
-        .ftco-footer li {
-            color: #555555;
-            /* A pleasant dark gray */
-            font-size: 15px;
-        }
-
-        .ftco-footer a {
-            color: #555555;
-            transition: color 0.2s ease-in-out;
-        }
-
-        /* Make headings a solid black */
-        .ftco-footer .ftco-heading-2 {
-            color: #000000;
-        }
-
-        /* Use an accent color for icons and link hovers */
-        .ftco-footer a:hover {
-            color: #0d6efd;
-            /* Bootstrap Blue */
-        }
-
-        .ftco-footer .icon {
-            color: #0d6efd;
-        }
-
-        /* Styles for the new campus subheadings */
-        .ftco-footer h5 {
-            color: #333333;
-            font-weight: 600;
-            margin-top: 1.5rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .ftco-footer h5:first-child {
-            margin-top: 0;
-        }
     </style>
 
-    <footer class="ftco-footer ftco-no-pt" style="background: white;">
+    <footer class="ftco-footer ftco-no-pt " style="background: white;">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-4 pt-5">
-                    <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2" style="color: #999999 !important;">General Inquiries</h2>
-                        <div class="block-23 mb-3">
-                            <ul>
-                                <li><a href="tel://04448133344"><span class="icon fa fa-phone"></span><span class=""
-                                            style="color: #999999 !important;">044-48133344 (Toll-Free)</span></a></li>
-                                <li><a href="mailto:mba@amrita.edu"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text" style="color: #999999 !important;">mba@amrita.edu</span></a>
-                                </li>
-                                <li><a href="https://chat.whatsapp.com/JtkI6i2eRsLEXNNo245gg3" target="_blank"><span
-                                            class="icon fa fa-whatsapp"></span><span class="text"
-                                            style="color: #999999 !important;">Join AmritaCAT! WhatsApp</span></a></li>
-                            </ul>
-                        </div>
-                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-telegram"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 pt-5">
-                    <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">Campus Contacts</h2>
-
-                        <h5>Coimbatore</h5>
-                        <ul class="list-unstyled">
-                            <li>PH: 9443384493, 9943117777</li>
-                            <li>EMAIL: asb@amrita.edu</li>
-                        </ul>
-
-                        <h5>Amritapuri</h5>
-                        <ul class="list-unstyled">
-                            <li>PH: +91 9072000196</li>
-                            <li>EMAIL: mba@am.amrita.edu</li>
-                        </ul>
-
-                        <h5>Kochi</h5>
-                        <ul class="list-unstyled">
-                            <li>PH: 9400998635</li>
-                            <li>EMAIL: mba@asb.kochi.amrita.edu</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 pt-5">
-                    <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">&nbsp;</h2>
-                        <h5>Bengaluru</h5>
-                        <ul class="list-unstyled">
-                            <li>PH: 7022588702</li>
-                            <li>EMAIL: mba@blr.amrita.edu</li>
-                        </ul>
-
-                        <h5>Amaravati</h5>
-                        <ul class="list-unstyled">
-                            <li>PH: 9841934447</li>
-                            <li>EMAIL: mba@av.amrita.edu</li>
-                            <li><a href="https://chat.whatsapp.com/FJTBHbba8OI7Zx9n9KS0Cj" target="_blank"
-                                    class="text-success"><span class="fa fa-whatsapp"></span> Join Group</a></li>
-                        </ul>
-
-                        <h5>Mysuru</h5>
-                        <ul class="list-unstyled">
-                            <li>PH: 8050091952, 9945531123</li>
-                            <li>EMAIL: admissions@my.amrita.edu</li>
-                        </ul>
-                    </div>
-                </div>
+           <div class="row mb-5">
+    <!-- General Inquiries -->
+    <div class="col-12 col-md-4 pt-5">
+        <div class="ftco-footer-widget pt-md-5 mb-4 ">
+            <h2 class="ftco-heading-2">General Inquiries</h2>
+            <div class="block-23 mb-3">
+                <ul>
+                    <li><a href="tel://04448133344"><span class="icon fa fa-phone"></span> 044-48133344 (Toll-Free)</a></li>
+                    <li><a href="mailto:mba@amrita.edu"><span class="icon fa fa-paper-plane"></span> mba@amrita.edu</a></li>
+                    <li><a href="https://chat.whatsapp.com/JtkI6i2eRsLEXNNo245gg3" target="_blank"><span class="icon fa fa-whatsapp"></span> Join AmritaCAT! WhatsApp</a></li>
+                </ul>
             </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p style="color: #999999;">
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script>
-                        All rights reserved | Designed with <i class="fa fa-heart text-danger" aria-hidden="true"></i>
-                        by <a href="https://www.amrita.edu" target="_blank">Amrita Vishwa Vidyapeetham</a>
+            <ul class="ftco-footer-social list-unstyled mt-4">
+                <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                <li><a href="#"><span class="fa fa-telegram"></span></a></li>
+            </ul>
+        </div>
+    </div>
 
-                    </p>
-                </div>
+    <!-- Campus Contacts (merged into one col for mobile) -->
+    <div class="col-12 col-md-8 pt-5">
+        <div class="row ">
+            <div class="col-12 col-sm-6 ">
+                <h2 class="ftco-heading-2">Campus Contacts</h2>
+
+                <h5>Coimbatore</h5>
+                <ul class="list-unstyled">
+                    <li>PH: 9443384493, 9943117777</li>
+                    <li>EMAIL: asb@amrita.edu</li>
+                </ul>
+
+                <h5>Amritapuri</h5>
+                <ul class="list-unstyled">
+                    <li>PH: +91 9072000196</li>
+                    <li>EMAIL: mba@am.amrita.edu</li>
+                </ul>
+
+                <h5>Kochi</h5>
+                <ul class="list-unstyled">
+                    <li>PH: 9400998635</li>
+                    <li>EMAIL: mba@asb.kochi.amrita.edu</li>
+                </ul>
             </div>
+
+            <div class="col-12 col-sm-6">
+                <h5>Bengaluru</h5>
+                <ul class="list-unstyled">
+                    <li>PH: 7022588702</li>
+                    <li>EMAIL: mba@blr.amrita.edu</li>
+                </ul>
+
+                <h5>Amaravati</h5>
+                <ul class="list-unstyled">
+                    <li>PH: 9841934447</li>
+                    <li>EMAIL: mba@av.amrita.edu</li>
+                    <li><a href="https://chat.whatsapp.com/FJTBHbba8OI7Zx9n9KS0Cj" target="_blank" class="text-success"><span class="fa fa-whatsapp"></span> Join Group</a></li>
+                </ul>
+
+                <h5>Mysuru</h5>
+                <ul class="list-unstyled">
+                    <li>PH: 8050091952, 9945531123</li>
+                    <li>EMAIL: admissions@my.amrita.edu</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
         </div>
     </footer>
 
